update: first num & sum num not negative

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     <script src="assets/bootstrap.min.js"></script>
     <script src="assets/jquery.min.js"></script>
     <script src="assets/jquery.validate.min.js"></script>
-    <script src="script.min.js"></script>
+    <!-- <script src="script.min.js"></script> -->
+    <script src="main.js"></script>
   </body>
 </html>
