--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
     <script src="assets/bootstrap.min.js"></script>
     <script src="assets/jquery.min.js"></script>
     <script src="assets/jquery.validate.min.js"></script>
-    <!-- <script src="script.min.js"></script> -->
-    <script src="main.js"></script>
+    <script src="script.min.js"></script>
   </body>
 </html>
