--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <option value="direct">Direct Sum</option>
                             <option value="5_comp">5 Compliments</option>
                             <option value="10_comp">10 Compliments</option>
-                            <option value="mix_comp">All Compliments</option>
+                            <option value="mix_comp" selected>All Compliments</option>
                         </select>
                     </div>
                     <div class="input-group mb-3">
