script include change

--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
     <script src="assets/bootstrap.min.js"></script>
     <script src="assets/jquery.min.js"></script>
     <script src="assets/jquery.validate.min.js"></script>
-    <!-- <script src="script.min.js" type="module"></script> -->
-    <script src="main.js" type="module"></script>
+    <script src="script.min.js" type="module"></script>
   </body>
 </html>
