added mespeak.js for fallback alternative for browser API

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div id="message"></div>
         </div>
 
-        <button id="history-btn" class="btn btn-outline-dark position-absolute disabled-element" type="button" data-bs-toggle="offcanvas" data-bs-target="#history" aria-controls="historyToggle" disabled>
+        <button id="history-btn" class="btn btn-outline-dark position-absolute disabled-element" type="button" data-bs-toggle="offcanvas" data-bs-target="#history" disabled>
             History
         </button>
 
@@ -45,7 +45,7 @@
                   </button>
             </div>
             <div class="col col-12 order-4 pt-2 text-center">
-                Tool Developed by <a href="https://hashtagweb.in" target="_blank">Hashtagweb.in</a>
+                Tool Developed by <a href="https://hashtagweb.in" target="_blank" rel="noopener">Hashtagweb.in</a>
             </div>
         </div>
     </section>
@@ -108,6 +108,8 @@
     <script src="assets/bootstrap.min.js"></script>
     <script src="assets/jquery.min.js"></script>
     <script src="assets/jquery.validate.min.js"></script>
+    <script src="./assets/mespeak/mespeak.js"></script>
+    <script src="./assets/mespeak/mespeak-core.js"></script>
     <script src="script.min.js"></script>
   </body>
 </html>
